# DATN1

./: .env.docker  .env.docker.example  .gitignore  Cauhoi.json  README.md  data_dump.sql  docker-compose.yml  export_db.py  task.md  test_docker.ps1
backend/tn/: .dockerignore  .env.example  Dockerfile  migrate.py  migrate_add_ten_lop_mon.py  migrate_add_violations_column.py  pyproject.toml  requirements.txt  run_sql.py  setup_drive_oauth.py  start.cmd  test.py  test_khoahoc.py  tn_init.sql  update_db.py  update_khoahoc.py
backend/tn/certs/: ca.pem
backend/tn/scratch/: audit_database_encoding.py  check_charset.py  check_missing_students.py  check_raw_data.py  discover_cols.py  fix_all_remaining_tables.py  fix_lichhoc.py  fix_mojibake.py  fix_remaining.py  query_one_sv.py  test_api_client.py  test_fix.py  test_gemini.py  test_search_student.py
backend/tn/src/tn/: main.py
backend/tn/src/tn/config/: database.py
backend/tn/src/tn/handlers/: auth_handler.py  chat_handler.py  diem_mon_hoc_handler.py  diem_trac_nghiem_handler.py  drive_handler.py  giao_vien_handler.py  hoc_ki_handler.py  khoa_hoc_handler.py  lich_hoc_handler.py  lop_handler.py  lop_mon_hoc_handler.py  memory_handler.py  mon_hoc_handler.py  nam_hoc_handler.py  quiz_handler.py  sinh_vien_handler.py  sinh_vien_lop_mon_hoc_handler.py  tai_khoan_handler.py
backend/tn/src/tn/models/: __init__.py  diem_mon_hoc.py  diem_trac_nghiem.py  giao_vien.py  hoc_ki.py  khoa_hoc.py  lich_hoc.py  lop.py  lop_mon_hoc.py  mon_hoc.py  nam_hoc.py  sinh_vien.py  sinh_vien_lop_mon_hoc.py  tai_khoan.py
figma/: 01_login.html  (+13 more)
(+197 files in other folders)
