[project]
name = "tn"
version = "0.1.0"
description = ""
authors = [
    {name = "TranPhat02",email = "phattran2662002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "pymysql (>=1.1.0,<2.0.0)",
    "motor (>=3.3.0,<4.0.0)",
    "pymongo (>=4.6.0,<5.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "google-generativeai (>=0.8.0)",
    "google-api-python-client (>=2.0.0)",
    "google-auth-oauthlib (>=1.0.0)",
    "python-multipart (>=0.0.18)"
]

[tool.poetry]
packages = [{include = "tn", from = "src"}]

[tool.poetry.scripts]
server = "tn.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
